--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,10 +1,13 @@
 <view class="container">
   <view class="swiper">
     <swiper indicator-dots="true" autoplay="true" interval="5000" duration="500" >
-      <block wx:for="{{}}">
+      <block 
+      wx:for="{{swiperList}}"
+      wx:key="goods_id"
+      >
       <navigator>
         <swiper-item>
-          <image src="{{}}" mode="aspectFill"></image>
+          <image mode="widthFix" src="{{item.image_src}}" mode="aspectFill"></image>
         </swiper-item>
       </navigator>
     </block>
@@ -21,12 +24,12 @@
   <view class="bottom">
     <view class="rec_text">上新啦！</view>
     <view class="pic_group">
-      <view class="pic_box" wx:for="{{4}}">
+      <view class="pic_box" wx:for="{{dataobj}}">
         <navigator url="../detail/detail">
-        <image mode="aspectFill"></image>
-        <view class="itro">说明说啊决赛晒好惨啊啊惭愧牛仔裤v查看</view>
+        <image mode="aspectFill" src="{{item.products_pic}}"></image>
+        <view  class="itro" >{{item.products_name}}</view>
         <view class="bbtm">
-          <view>￥9.99</view>
+          <view>{{item.products_price}}</view>
           <image src="../../images/购物车.png"/>
         </view>
       </navigator>
